# search-api

./: .env.example  .gitignore  AIRTABLE_SCHEMA.md  CHANGELOG.md  OPERATIONS.md  README.md  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  errors.py  logging_config.py  main.py  middleware.py  ratelimit.py  security.py
app/jobs/: __init__.py  scheduler.py
app/models/: company_classification.py  grant_details.py  jobs.py  keys.py  match_details.py  matches.py  searches.py
app/repositories/: airtable.py
app/routers/: health.py  internal.py  landing.py  match_checks.py  matches.py  searches.py
app/services/: classification_prompt.py  forward_search.py  gemini_client.py  match_filters.py  match_mapping.py  n8n.py  notifications.py  prompts.py  reverse_search.py  smtp_client.py
tests/: conftest.py  test_classification.py  test_config_resilience.py  test_errors.py  test_forward_filters.py  test_forward_search.py  test_gemini_parse.py  test_health.py  test_internal_digest.py  test_landing.py  test_match_filters.py  test_match_mapping.py  test_matches.py  test_notifications.py  test_ratelimit.py  test_reverse_search.py  test_scheduler.py  test_searches.py
